[gd_scene load_steps=6 format=3 uid="uid://ba70trsm1vfyt"]

[ext_resource type="Theme" uid="uid://6aavhiaw1d6l" path="res://resources/default_font_ui.tres" id="1_7cxrc"]
[ext_resource type="PackedScene" uid="uid://dc6mahoy1datr" path="res://bulletins/fading_bulletin/fading_bulletin_template.tscn" id="1_othp0"]
[ext_resource type="Script" path="res://bulletins/pause_menu/pause_menu.gd" id="2_4q66u"]

[sub_resource type="InputEventKey" id="InputEventKey_qcgdp"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_hjg66"]
events = [SubResource("InputEventKey_qcgdp")]

[node name="PauseMenu" instance=ExtResource("1_othp0")]
theme = ExtResource("1_7cxrc")
script = ExtResource("2_4q66u")

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
shortcut = SubResource("Shortcut_hjg66")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Resume
"

[node name="SettingButton" type="Button" parent="VBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Settings
"

[node name="ExitButton" type="Button" parent="VBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Exit
"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
